# flutterust

./: Makefile.toml  pubspec.yaml
android/app/src/main/: AndroidManifest.xml
ios/Flutter/: .last_build_id
ios/Runner.xcodeproj/: project.pbxproj
lib/: api.dart  main.dart
lib/protobuf/: any.pbenum.dart  any.pbjson.dart  any.pbserver.dart  api.pb.dart  api.pbjson.dart  api.pbserver.dart  api.proto  params.pb.dart  params.pbjson.dart  params.pbserver.dart  params.proto
native/adder/: Cargo.toml
native/adder-ffi/: Cargo.toml  binding.h
native/adder-ffi/src/: lib.rs
native/adder/src/: lib.rs
native/signer/: Cargo.toml
native/signer/tests/: lib_test.rs
