[package]
name = "adder-ffi"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[lib]
name = "adder_ffi"
crate-type = ["staticlib"]

[dependencies]
tcx-chain= {git="https://github.com/boolnetwork/token-core.git",version="0.1.0",branch="dev"}
tcx-primitive = {git="https://github.com/boolnetwork/token-core.git",version="0.1.0",branch="dev"}
tcx = {git="https://github.com/boolnetwork/token-core.git",version="0.1.0",branch="dev"}
hex = "0.4.0"
failure = "0.1.5"
lazy_static = "1.3.0"
parking_lot = "0.10"
prost = "0.6.1"

[build-dependencies]
cbindgen = "0.14.3"
dart-bindgen = "0.1.7"